objects/fcio1__Fullcast_Embargo_Policy__c.object
<CustomObject>
    <fields>
        <fullName>fcio1__CountrySearchFields__c</fullName>
        <label>CountrySearchFields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fcio1__EnableFuzzyFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EnableFuzzyFlag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fcio1__FuzzyScore__c</fullName>
        <label>FuzzyScore</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fcio1__NameSearchFields__c</fullName>
        <label>NameSearchFields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fcio1__SearchList__c</fullName>
        <label>SearchList</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>fcio1__Tags__c</fullName>
        <label>Tags</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fcio1__Target_Entity__c</fullName>
        <label>Target Entity</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fcio1__Territory_External__c</fullName>
        <label>Territory External</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fcio1__Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Territory</label>
        <referenceTo>fcio1__GTM__c</referenceTo>
        <relationshipName>Embargo_Policies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fcio1__active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>active</label>
        <type>Checkbox</type>
    </fields>
    <label>Fullcast Embargo Policy</label>
    <listViews>
        <fullName>fcio1__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Embargo Policy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fullcast Embargo Policies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>